modify slim files

--- a/app/view/home.slim
+++ b/app/view/home.slim
@@ -1,7 +1,7 @@
 .container
   .row
     h2
-      span.project.owner
+      span.restaurant
         = project.owner.username
       span.project.name style="padding-left:20px"
         = project.name
