--- a/app/views/restaurant.slim
+++ b/app/views/restaurant.slim
@@ -1,6 +1,10 @@
+doctype html
+html
+    head
+        meta http-equiv="Content-Type" content="text/html; charset=big-5"
+    body
 .container
   .row
     h2
       span.restaurant.owner
-        = restaurant
-  
+        = restaurant.name
