--- a/app/views/layout.slim
+++ b/app/views/layout.slim
@@ -1,8 +1,8 @@
 doctype html
 html
   head
-    title CodePraise
-
+    title="Ewa"
+    meta http-equiv="Content-Type" content="text/html; charset=utf-8"
     / Bootstrap CSS and theme (United Theme)
     link{
       href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/cerulean/bootstrap.min.css"
