--- a/app/views/assets/css/style.css
+++ b/app/views/assets/css/style.css
@@ -21,7 +21,13 @@ h1 {
   }
   
   .project.name {
-    
+    font-size: 0.5em;
+    color: rgb(101, 121, 158);
+  }
+
+  img {
+    width: 50px;
+    height: 50px;
   }
   
   .vcenter {
