--- a/app/views/restaurant.slim
+++ b/app/views/restaurant.slim
@@ -1,24 +1,15 @@
 .container
   .row
     h2
-      span.project.owner
-        = restaurant.name
+      span.restaurants
+        = restaurants
       br
-      span.project.name
-        - 7.times do |items| 
-          = restaurant.open_hours[items]
-          br
+      span.restaurants.name
   .container
     .row
       .col-lg-1.col-md-2.col-sm-2
-        span.project.attribute Reviews:
+        span.restaurants.attribute
       .col-lg-11.col-md-10.col-sm-6
-          - 5.times do |items|
-              project.detail = restaurant.reviews[items][:author_name] 
-              img src = restaurant.reviews[items][:profile_photo_url] /
-              br.project.detail = restaurant.reviews[items][:relative_time_description]
-              project.detail = restaurant.reviews[items][:text]
-              hr
               
 
 
