--- a/app/views/assets/css/style.css
+++ b/app/views/assets/css/style.css
@@ -1,4 +1,4 @@
-h1 {
+  h1{
     font-weight: bold;
   }
   
@@ -26,8 +26,8 @@ h1 {
   }
 
   img {
-    width: 50px;
-    height: 50px;
+    width: 80px;
+    height: 80px;
   }
   
   .vcenter {
@@ -54,6 +54,10 @@ h1 {
   .blank-row {
     height: 30px;
   }
+
+  .restaurant-image-row {
+    height: 80px;
+  }
   
   .query-bar {
     background-color: #EEEEEE;
@@ -64,4 +68,28 @@ h1 {
     padding: 0.5in;
     font-size:11px;
     color:rgb(100, 100, 100);
+  }
+
+  .box {
+    width:100%;
+    height:100%;
+    overflow:hidden;
+    display:inline-block;
+  }
+
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+  }
+  
+  /* Create two equal columns that sits next to each other */
+  .column {
+    flex: 50%;
+    padding: 0 4px;
+  }
+  
+  .column img {
+    margin-top: 8px;
+    vertical-align: middle;
   }
