--- a/app/views/home.slim
+++ b/app/views/home.slim
@@ -8,6 +8,43 @@
           type='submit' id='repo-form-submit' class='submit' 
           value='submit' class="btn btn-success" 
         } Show restaurant
+    
     .row
+      .col-md-12.col-sm-1
+      h3 Choices for you
+    .row
+      .col-md-1.col-sm-1
+      .box
+        img src="https://tw.wamazing.com/media/wp-content/uploads/sites/4/2019/06/ramen-free-31.jpg"
+      .box
+        img src="https://pic.pimg.tw/flower033880/1604929278-3378971763-g.jpg"
+      .box
+        img src="https://pic.pimg.tw/flower033880/1604929278-1530499613-g.jpg"
+    .row
+      .col-md-1.col-sm-1
+      .box
+      img src="https://pic.pimg.tw/flower033880/1604929307-1830452882-g.jpg"
+      .box
+      img src="https://pic.pimg.tw/ping01ching02/1598768853-2660427255-g_l.jpg"
+      .box
+      img src="https://magipea.com/images/1551950800860.jpg"
+    .row 
+      .col-md-1.col-sm-1
+      .box
+      img src="https://fairylolita.com/wp-content/uploads/DSCF3995.jpg"
+      .box
+      img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSkc3ras7k3ix4kFwe7x7le0dto2cx4B3YnMg&usqp=CAU"
+      .box
+      img src="https://fairylolita.com/wp-content/uploads/DSCF8648.jpg"
+  
+
+  .row
       .col-md-12.blank-row
 
+  .row
+    .col-md-2.col-sm-3
+      button { 
+        type='submit' id='repo-form-submit' class='submit' 
+        value='submit' class="btn btn-success" 
+      } Try Again
+    
