--- a/app/views/home.slim
+++ b/app/views/home.slim
@@ -1,50 +1,115 @@
+- require_relative "../../spec/spec_helper"
+
 .container
-  form role="form" action="/restaurant" method='POST' id='show-project-form'
-    .row.vertical-align.query-bar
-      .col-md-2.col-sm-3
-        .text-right restaurant:
-      .col-md-2.col-sm-3
+  .row
+    .col-md-6
+      .row
+        .col-md-12
+          form[action="/action_page.php"]
+              .form-group
+                label[for="sel1"]
+                select#sel1.form-control[name="sellist1"]
+                  option
+                    | 地區
+                  option
+                    | 新竹市
+                  option
+                    | 竹北市
+                  option
+                    | 竹東鎮
+                  option
+                    | 新埔鎮
+                  option
+                    | 關西鎮
+                  option
+                    | 新豐鄉
+                  option
+                    | 峨眉鄉
+                  option
+                    | 寶山鄉
+                  option
+                    | 五峰鄉
+                  option
+                    | 橫山鄉
+                  option
+                    | 北埔鄉
+                  option
+                    | 尖石鄉
+                  option
+                    | 芎林鄉
+                  option
+                    | 湖口鄉
+      .row
+        .col-md-6
+          .form-group
+            input.form-control[type="text" placeholder="Min Price" name="min_money"]
+        .col-md-6
+          .form-group
+            input.form-control[type="text" placeholder="Max Price" name="mas_money"]
+      .row
+          button.btn.btn-primary.btn-block[ type="submit"]
+            | Ewa recommend
+      
+      .row
+        .col-md-6.blank-row 
+
+  .row
+    .col-md-6
+      .row
+        .col-md-4.col-sm-6
+          input alt="Submit" src="https://imgcp.aacdn.jp/img-a/1200/auto/global-aaj-front/article/2018/06/5b18f8f47dd85_5b18f71c420bb_613294324.jpg" type="image"/
+        .col-md-4.col-sm-6
+          input alt="Submit" src="https://cdn.funnow.com.tw/images/oblog/%E6%96%B9%E5%BD%A2960_9603.002_8bbd8a.jpg" type="image"/
+        .col-md-4.col-sm-6
+          input alt="Submit" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSE2WdGlyjIyeNJEjgALVoKGjoCxDBKfaEFsA&usqp=CAU" type="image"/
+
+
+        .col-md-4.col-sm-6
+          input alt="Submit" src="https://i1.wp.com/imreadygo.com/wp-content/uploads/2019/08/FotoJet-2-9.jpg?fit=750%2C750&ssl=1" type="image"/
+        .col-md-4.col-sm-6
+          input alt="Submit" src="https://pic.pimg.tw/ping01ching02/1598768853-2660427255-g_l.jpg" type="image"/
+        .col-md-4.col-sm-6
+          input alt="Submit" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/ryjtyj-1599131005.jpg?crop=0.487xw:0.974xh;0,0.0261xh&resize=640:*" type="image"/
+
+
+        .col-md-4.col-sm-6
+          input alt="Submit" src="https://www.adaymag.com/wp-content/uploads/2015/08/adaymag-food-photography-tips-8-02.jpg" type="image"/
+        .col-md-4.col-sm-6
+          input alt="Submit" src="https://www.adaymag.com/wp-content/uploads/2015/08/adaymag-instagram9-05.jpg" type="image"/
+        .col-md-4.col-sm-6
+          input alt="Submit" src="https://findlife.com.tw/menu/blog/wp-content/uploads/2019/09/6-1.jpg" type="image"/
+
+    
+      .row
+        .blank-row
+
+      .row
         button { 
           type='submit' id='repo-form-submit' class='submit' 
-          value='submit' class="btn btn-success" 
-        } Show restaurant
-    
-    .row
-      .col-md-12.col-sm-1
-      h3 Choices for you
-    .row
-      .col-md-1.col-sm-1
-      .box
-        img src="https://tw.wamazing.com/media/wp-content/uploads/sites/4/2019/06/ramen-free-31.jpg"
-      .box
-        img src="https://pic.pimg.tw/flower033880/1604929278-3378971763-g.jpg"
-      .box
-        img src="https://pic.pimg.tw/flower033880/1604929278-1530499613-g.jpg"
-    .row
-      .col-md-1.col-sm-1
-      .box
-      img src="https://pic.pimg.tw/flower033880/1604929307-1830452882-g.jpg"
-      .box
-      img src="https://pic.pimg.tw/ping01ching02/1598768853-2660427255-g_l.jpg"
-      .box
-      img src="https://magipea.com/images/1551950800860.jpg"
-    .row 
-      .col-md-1.col-sm-1
-      .box
-      img src="https://fairylolita.com/wp-content/uploads/DSCF3995.jpg"
-      .box
-      img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSkc3ras7k3ix4kFwe7x7le0dto2cx4B3YnMg&usqp=CAU"
-      .box
-      img src="https://fairylolita.com/wp-content/uploads/DSCF8648.jpg"
+          value='submit' class="btn btn-block" 
+        } Try Again
+
+    .col-md-6
+        .card.flex-md-row.mb-4.box-shadow.h-md-250
+          .card-body.d-flex.flex-column.align-items-start
+            .row
+              .col-md-12
+                strong.d-inline-block.mb-2.text-success Good Good Eat
+                h3.mb-0
+                  a.text-dark 螺絲瑪莉
+                .mb-1.text-muted Telephone: 0915913612
+                .mb-1.text-muted Address: 新竹市東區101號
+                .mb-1.text-muted Money:500
+            iframe allowfullscreen="" frameborder="0" height="150" src="https://www.google.com/maps/embed/v1/place?key=#{GMAP_TOKEN}&q=Space+Needle,螺絲瑪莉" style="border:0" width="100%" 
+            p.card-text.mb-auto Reviews
+
+  .row
+    .blank-row
+  .row
+    .col-md-12
+      iframe allowfullscreen="" frameborder="0" height="500" src="https://aboa1110.pixnet.net/blog/post/290826385" style="border:0" width="100%" 
   
+          
+          
 
-  .row
-      .col-md-12.blank-row
-
-  .row
-    .col-md-2.col-sm-3
-      button { 
-        type='submit' id='repo-form-submit' class='submit' 
-        value='submit' class="btn btn-success" 
-      } Try Again
-    
+      
