--- a/app/views/layout.slim
+++ b/app/views/layout.slim
@@ -38,12 +38,18 @@ html
     .container id='html_body'
       section
         .row style="vertical-align: middle;"
-          .col-12
-            h1 
-              a href="/" Ewa
+          .col-6
+            h1.top-buffer
+              a href="/" Ewa in Hsinchu
+              
 
       section
         == yield
 
       footer
         = "Ewa is made for demonstration purposes. We cannot warrant full correctness of all content. Ewa uses cookies for sessions but does not track users."
+
+
+
+
+
