--- a/app/views/home.slim
+++ b/app/views/home.slim
@@ -99,9 +99,16 @@
                   a.text-dark 螺絲瑪莉
                 .mb-1.text-muted Telephone: 0915913612
                 .mb-1.text-muted Address: 新竹市東區101號
-                .mb-1.text-muted Money:500
+                .mb-1.text-muted Money: 500
             iframe allowfullscreen="" frameborder="0" height="150" src="https://www.google.com/maps/embed/v1/place?key=#{GMAP_TOKEN}&q=Space+Needle,螺絲瑪莉" style="border:0" width="100%" 
-            p.card-text.mb-auto Reviews
+            span Mon
+            span Tue
+            span Wed
+            span Thu
+            span Fri
+            span Sat
+            span Sun
+            
 
   .row
     .blank-row
