--- a/app/views/home.slim
+++ b/app/views/home.slim
@@ -1,6 +1,21 @@
 - require_relative "../../spec/spec_helper"
 
 .container
+  form role="form" action="/restaurant" method='POST' id='show-project-form'
+    .row.vertical-align.query-bar
+      .col-md-2.col-sm-3
+        .text-right restaurant:
+      .col-md-2.col-sm-3
+        button { 
+          type='submit' id='repo-form-submit' class='submit' 
+          value='submit' class="btn btn-success" 
+        } Show restaurant
+    .row
+      .col-md-12.blank-row
+
+
+
+.container
   .row
     .col-md-6
       .row
