--- a/app/views/home.slim
+++ b/app/views/home.slim
@@ -20,13 +20,13 @@
     .col-md-6
       .row
         .col-md-12
-          form[action="/action_page.php"]
+          form role="form" method='POST' id='filter-form'
               .form-group
                 label[for="sel1"]
                 select#sel1.form-control[name="sellist1"]
-                  optgroup label=("台北市") 
                   option
                     | 地區
+                  optgroup label=("台北市") 
                   option
                     | 中正區
                   option
