--- a/app/views/restaurant.slim
+++ b/app/views/restaurant.slim
@@ -1,16 +1,14 @@
 .container
   .row
     h2
-      span.restaurants
-        = restaurants
+      span.pick_9rests
+        = pick_9rests
       br
+      span.pick_one
+        = pick_one
       span.restaurants.name
   .container
     .row
       .col-lg-1.col-md-2.col-sm-2
         span.restaurants.attribute
       .col-lg-11.col-md-10.col-sm-6
-              
-
-
-    
