--- a/app/views/assets/css/style.css
+++ b/app/views/assets/css/style.css
@@ -44,9 +44,12 @@
     align-content: center;
   }
 
-input {
-  width: 90%;
-  height: 90%;
-  border-radius: 3%;
-}
+  input {
+    width: 90%;
+    height: 90%;
+    border-radius: 3%;
+  }
 
+  iframe {
+    
+  }
