--- a/app/views/res_nine.slim
+++ b/app/views/res_nine.slim
@@ -11,8 +11,6 @@
     .row
       .col-md-12.blank-row
 
-
-
 .container
   .row
     .col-md-6
@@ -111,8 +109,6 @@
                     option
                       | 貢寮區
 
-
-                
                 .col-md-6
                   label[for="min_money_sel"]
                   select#min_money_sel.form-control[name="min_money_sel"]
@@ -188,12 +184,11 @@
           .form-group
             .row
               .col-md-4.col-sm-6
-                input alt="Submit" src="https://i.pinimg.com/736x/b5/ff/f0/b5fff015ceeebc42663d5a5da8040794.jpg" type="image" value="1"/
+                input alt="Submit" src="https://imgcp.aacdn.jp/img-a/1200/auto/global-aaj-front/article/2018/06/5b18f8f47dd85_5b18f71c420bb_613294324.jpg" type="image" value="1"/
               .col-md-4.col-sm-6
                 input alt="Submit" src="https://cdn.funnow.com.tw/images/oblog/%E6%96%B9%E5%BD%A2960_9603.002_8bbd8a.jpg" type="image" value="2"/
               .col-md-4.col-sm-6
                 input alt="Submit" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSE2WdGlyjIyeNJEjgALVoKGjoCxDBKfaEFsA&usqp=CAU" type="image" value="3"/
-
 
               .col-md-4.col-sm-6
                 input alt="Submit" src="https://i1.wp.com/imreadygo.com/wp-content/uploads/2019/08/FotoJet-2-9.jpg?fit=750%2C750&ssl=1" type="image" value="4"/
@@ -202,7 +197,6 @@
               .col-md-4.col-sm-6
                 input alt="Submit" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/ryjtyj-1599131005.jpg?crop=0.487xw:0.974xh;0,0.0261xh&resize=640:*" type="image" value="6"/
 
-
               .col-md-4.col-sm-6
                 input alt="Submit" src="https://www.adaymag.com/wp-content/uploads/2015/08/adaymag-food-photography-tips-8-02.jpg" type="image" value="7"/
               .col-md-4.col-sm-6
@@ -210,7 +204,6 @@
               .col-md-4.col-sm-6
                 input alt="Submit" src="https://findlife.com.tw/menu/blog/wp-content/uploads/2019/09/6-1.jpg" type="image" value="9"/
 
-    
       .row
         .blank-row
 
@@ -232,12 +225,11 @@
                 .mb-1.text-muted Telephone: 0915913612
                 .mb-1.text-muted Address: 新竹市東區101號
                 .mb-1.text-muted Money: 500
-            iframe allowfullscreen="" frameborder="0" height="150" src="https://www.google.com/maps/embed/v1/place?key=#{Ewa::App.config.GMAP_TOKEN}&q=Space+Needle,螺絲瑪莉" style="border:0" width="100%" 
+            iframe allowfullscreen="" src="https://www.google.com/maps/embed/v1/place?key=#{Ewa::App.config.GMAP_TOKEN}&q=Space+Needle,螺絲瑪莉" frameborder="0" height="150" style="border:0" width="100%" 
             span 評論goes here
-            
 
   .row
     .blank-row
   .row
     .col-md-12
-      iframe allowfullscreen="" frameborder="0" height="500" src="https://aboa1110.pixnet.net/blog/post/290826385" style="border:0" width="100%" 
+      iframe allowfullscreen=""  src="https://aboa1110.pixnet.net/blog/post/290826385" frameborder="0" height="500" style="border:0" width="100%" 
