--- a/app/views/layout.slim
+++ b/app/views/layout.slim
@@ -40,7 +40,7 @@ html
         .row style="vertical-align: middle;"
           .col-6
             h1.top-buffer
-              a href="/" Ewa in Hsinchu
+              a href="/" Ewa in Tapei Area
               
 
       section
