--- a/app/views/restaurant.slim
+++ b/app/views/restaurant.slim
@@ -48,37 +48,38 @@
             .row
 
               .col-md-4.col-sm-6
-                button name="img_num" type="submit" value=[0, pick_9rests,rests]
-                  img alt="Submit" src="#{pick_9rests[0].cover_img}" 
+                button name="img_num" type="submit" value=pick_9rests[0].inspect
+                  img alt="Submit" src="#{pick_9rests[0].cover_img}" width=150 height=150 
 
               .col-md-4.col-sm-6
-                button name="img_num" type="submit" value=[1, pick_9rests,rests]
-                  img alt="Submit" src="#{pick_9rests[1].cover_img}" 
+                button name="img_num" type="submit" value=pick_9rests[1].inspect
+                  img alt="Submit" src="#{pick_9rests[1].cover_img}" width=150 height=150 
               .col-md-4.col-sm-6
-                button name="img_num" type="submit" value=[2, pick_9rests,rests]
-                  img alt="Submit" src="#{pick_9rests[2].cover_img}" 
+                button name="img_num" type="submit" value=pick_9rests[2].inspect
+                  img alt="Submit" src="#{pick_9rests[2].cover_img}" width=150 height=150
               
               .col-md-4.col-sm-6
-                button name="img_num" type="submit" value=[3, pick_9rests,rests] 
-                  img alt="Submit" src="#{pick_9rests[3].cover_img}" 
+                button name="img_num" type="submit" value=pick_9rests[3].inspect
+                  img alt="Submit" src="#{pick_9rests[3].cover_img}" width=150 height=150 
 
               .col-md-4.col-sm-6
-                button name="img_num" type="submit" value=[4, pick_9rests,rests]
-                  img alt="Submit" src="#{pick_9rests[4].cover_img}" 
+                button name="img_num" type="submit" value=pick_9rests[4].inspect
+                  img alt="Submit" src="#{pick_9rests[4].cover_img}" width=150 height=150
               .col-md-4.col-sm-6
-                button name="img_num" type="submit" value=[5, pick_9rests,rests]
-                  img alt="Submit" src="#{pick_9rests[5].cover_img}"
+                button name="img_num" type="submit" value=pick_9rests[5].inspect
+                  img alt="Submit" src="#{pick_9rests[5].cover_img}" width=150 height=150
+
               
               .col-md-4.col-sm-6
-                button name="img_num" type="submit" value=[6, pick_9rests,rests]
-                  img alt="Submit" src="#{pick_9rests[6].cover_img}" 
+                button name="img_num" type="submit" value=pick_9rests[6].inspect
+                  img alt="Submit" src="#{pick_9rests[6].cover_img}" width=150 height=150 
 
               .col-md-4.col-sm-6
-                button name="img_num" type="submit" value=[7, pick_9rests,rests] 
-                  img alt="Submit" src="#{pick_9rests[7].cover_img}" 
+                button name="img_num" type="submit" value=pick_9rests[7].inspect
+                  img alt="Submit" src="#{pick_9rests[7].cover_img}" width=150 height=150 
               .col-md-4.col-sm-6
-                button name="img_num" type="submit" value=[8, pick_9rests,rests]
-                  img alt="Submit" src="#{pick_9rests[8].cover_img}"
+                button name="img_num" type="submit" value=pick_9rests[8].inspect
+                  img alt="Submit" src="#{pick_9rests[8].cover_img}" width=150 height=150 
               
 
 
