btn_input_check

--- a/app/views/res_detail.slim
+++ b/app/views/res_detail.slim
@@ -1,8 +1,26 @@
 .container
   .row
     h2
-      span.img_num
-      = img_num
+      .row
+        span.img_num
+        = img_num
+
+      .row
+        .col-md-6.blank-row 
+
+      .row
+        span.pick_9rests
+        = pick_9rests
+
+      .row
+        .col-md-6.blank-row 
+
+      .row
+        span.rests
+        = rests
+
+
+
 
   
 
