--- a/app/views/restaurant.slim
+++ b/app/views/restaurant.slim
@@ -1,5 +1,5 @@
 .container
-  form role="form" action="/restaurant/test_detail" method='POST' id='show-project-form'
+  form role="form" action="/test_detail" method='POST' id='show-project-form'
     .row
       h2    
         span.pick_9rests
