--- a/app/views/test_detail.slim
+++ b/app/views/test_detail.slim
@@ -1,5 +1,8 @@
 .container
   .row
     h2    
-      span.pick_one
-        = pick_one
+      span.num
+        = img_num
+      
+      span.pick_nine
+        = pick_nine
