--- a/app/presentation/assets/css/style.css
+++ b/app/presentation/assets/css/style.css
@@ -50,6 +50,40 @@
     border-radius: 3%;
   }
 
-  iframe {
-    
+  .img_wrap:hover .img_description_layer {
+    visibility: visible;
+    opacity: 1;
+  }
+
+  .img_description_layer {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(123, 124, 133, 0.6);
+    color: #fff;
+    visibility: hidden;
+    opacity: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  
+    /* transition effect. not necessary */
+    transition: opacity .2s, visibility .2s;
+  }
+
+  .img_wrap {
+    position: relative;
+  }
+
+  .img_description {
+    transition: .2s;
+    transform: translateY(1em);
+    width: 150px;
+    word-wrap: break-word;
+  }
+  
+  .img_wrap:hover .img_description {
+    transform: translateY(0);
   }
