--- a/app/presentation/views_html/restaurant.slim
+++ b/app/presentation/views_html/restaurant.slim
@@ -13,7 +13,6 @@
                     placeholder= 'Town'
                   }
 
-                
                 .col-md-6
                   input { 
                     type='text' name='min_money'
@@ -51,17 +50,19 @@
               - 9.times do |num|
                 .col-md-4.col-sm-6
                   button class="btn" name="img_num" type="submit" value="#{pick_9rests[num].name}"
-                    img alt="Submit" src="#{pick_9rests[num].cover_img}" width=150 height=150 
+                    .img_wrap
+                      img alt="Submit" src="#{pick_9rests[num].cover_img}" width=150 height=150 
+                      .img_description_layer
+                        p.img_description = pick_9rests[num].name 
 
       .row
         .blank-row
 
       .row
-        .col-md-12
-          button { 
-            type='submit' id='repo-form-submit' action="/res_nine" class='submit' 
-            value='submit' class="btn btn-block btn-primary" 
-          } Try Again
+            button { 
+              type='submit' id='repo-form-submit' action="/res_nine" class='submit' 
+              value='submit' class="btn btn-block btn-primary" 
+            } Try Again
 
     .col-md-6
         .card.flex-md-row.mb-4.box-shadow.h-md-250
@@ -76,7 +77,6 @@
                 .mb-1.text-muted Money: 400
             iframe allowfullscreen="" frameborder="0" height="150" src="https://www.google.com/maps/embed/v1/place?key=#{Ewa::App.config.GMAP_TOKEN}&q=Space+Needle,螺絲瑪莉" style="border:0" width="100%" 
             span 評論goes here
-
 
   .row
     .blank-row
