--- a/app/views/test_detail.slim
+++ b/app/views/test_detail.slim
@@ -1,8 +1,6 @@
 .container
   .row
     h2    
-      span.num
-        = img_num
+      span.rest_detail
+        = rest_detail
       
-      span.pick_nine
-        = pick_nine
