--- a/app/views/test_detail.slim
+++ b/app/views/test_detail.slim
@@ -2,5 +2,8 @@
   .row
     h2    
       span.rest_detail
-        = rest_detail
+        = rest_detail.name
+      
+      span.pick_9rests
+        = pick_9rests
       
