--- a/app/presentation/views_html/test_detail.slim
+++ b/app/presentation/views_html/test_detail.slim
@@ -3,6 +3,6 @@
     h2    
       span.rest_detail
         = rest_detail.name
-        = rest_detail.ewa_tag.inspect
+        = rest_detail.ewa_tag.ewa_tag
       
       
