res detail table

--- a/app/presentation/views_html/layout.slim
+++ b/app/presentation/views_html/layout.slim
@@ -39,7 +39,7 @@ html
       section
         .row style="vertical-align: middle;"
           .col-6
-            h1.top-buffer
+            h1.top-buffer id="main_header"
               a href="/" Ewa in Tapei Area
               
       section
