--- a/app/presentation/views_html/home_test.slim
+++ b/app/presentation/views_html/home_test.slim
@@ -9,7 +9,7 @@
                 .col-md-12
                   input { 
                     type='text' name='town'
-                    id='github_url_input' class="form-control"
+                    id='town' class="form-control"
                     placeholder= 'Town'
                   }
             
