--- a/app/presentation/views_html/home_test.slim
+++ b/app/presentation/views_html/home_test.slim
@@ -31,7 +31,7 @@
                   .row.blank-row      
                 .col-md-12
                   button { 
-                    type='submit' id='repo-form-submit' class='submit' 
+                    type='submit' id='filter-form-submit' class='submit' 
                     value='submit' class="btn btn-outline-primary btn-block" 
                   } Ewa Recommend
 
