--- a/app/presentation/views_html/restaurant.slim
+++ b/app/presentation/views_html/restaurant.slim
@@ -15,14 +15,16 @@
 
                 .col-md-6
                   input { 
-                    type='text' name='min_money'
+                    type='number' name='min_money'
+                    min='0'
                     id='min_money' class="form-control"
                     placeholder= 'Min Price'
                   } 
 
                 .col-md-6
                   input { 
-                    type='text' name='max_money'
+                    type='number' name='max_money'
+                    min='100'
                     id='max_money' class="form-control"
                     placeholder= 'Max Price'
                   } 
@@ -49,11 +51,11 @@
             .row      
               - 9.times do |num|
                 .col-md-4.col-sm-6
-                  button class="btn bg-transparent" name="img_num" type="submit" value="#{pick_9rests[num].id}" 
+                  button class="btn bg-transparent" name="img_num" type="submit" value="#{pick_9rests[num]}" 
                     .img_wrap
-                      img.res-pic alt="Submit" src="#{pick_9rests[num].pictures[1].link}" width=150 height=150 
+                      img.res-pic alt="Submit" src="#{img_links[num]}" width=150 height=150 
                       .img_description_layer
-                        p.img_description = pick_9rests[num].name
+                        p.img_description = pick_names[num]
 
       .row
         .blank-row
