--- a/app/presentation/views_html/test_detail.slim
+++ b/app/presentation/views_html/test_detail.slim
@@ -3,11 +3,8 @@
     h2    
       span.rest_detail
         = rest_detail.name
-<<<<<<< HEAD
-        = rest_detail.ewa_tag.ewa_tag
-=======
         = rest_detail.ewa_tag.inspect
-        = pick_9rests
->>>>>>> error_checking
+        = pick_ids
+        = pick_ids.count
       
       
