--- a/app/presentation/views_html/home_test.slim
+++ b/app/presentation/views_html/home_test.slim
@@ -15,15 +15,17 @@
 
                 .col-md-6
                   input { 
-                    type='text' name='min_money'
+                    type='number' name='min_money'
                     id='min_money' class="form-control"
+                    min=0
                     placeholder= 'Min Price'
                   } 
 
                 .col-md-6
                   input { 
-                    type='text' name='max_money'
+                    type='number' name='max_money'
                     id='max_money' class="form-control"
+                    min=100
                     placeholder= 'Max Price'
                   } 
                    
@@ -37,6 +39,9 @@
 
       .row
         .col-md-6.blank-row 
+
+          span.history 
+          = history
 
   .row
     .col-md-6
