--- a/app/presentation/views_html/restaurant_test.slim
+++ b/app/presentation/views_html/restaurant_test.slim
@@ -3,11 +3,9 @@
     .row      
       - 9.times do |num|
         .col-md-4.col-sm-6
-          button name="img_num" type="submit" value="#{pick_9rests[num]}"
+          button name="img_num" type="submit" value="#{pick_ids[num]}"
             img alt="Submit" src="#{img_links[num]}" width=150 height=150 
           
-          span.rest_detail
-          = "#{pick_9rests[num]}"
 
 
 
