--- a/app/presentation/views_html/res_detail.slim
+++ b/app/presentation/views_html/res_detail.slim
@@ -24,7 +24,7 @@
 
 
               
-          iframe allowfullscreen="" frameborder="0" height="200" src="https://www.google.com/maps/embed/v1/place?key=#{Ewa::App.config.GMAP_TOKEN}&q=Space+Needle,龍都酒樓" style="border:0" width="100%" 
+          iframe allowfullscreen="" frameborder="0" height="200" src="https://www.google.com/maps/embed/v1/place?key=#{Ewa::App.config.GMAP_TOKEN}&q=#{rest_detail.name}" style="border:0" width="100%" 
     .col-md-6
       .row
         .column
@@ -53,4 +53,3 @@
             span =rest_detail.reviews[num].author_name 
             span =rest_detail.reviews[num].text
             .mb-1.text-muted =rest_detail.reviews[num].relative_time_description
-      
