--- a/app/presentation/views_html/home_test.slim
+++ b/app/presentation/views_html/home_test.slim
@@ -7,12 +7,94 @@
             .form-group
               .row
                 .col-md-12
-                  input { 
-                    type='text' name='town'
-                    id='town' class="form-control"
-                    placeholder= 'Town'
-                  }
-            
+                  select#sel1.form-control name="town"
+                    option
+                      | 地區
+                    optgroup label=("台北市") 
+                    option
+                      | 中正區
+                    option
+                      | 大同區
+                    option
+                      | 中山區
+                    option
+                      | 松山區
+                    option
+                      | 大安區
+                    option
+                      | 萬華區
+                    option
+                      | 信義區
+                    option
+                      | 士林區
+                    option
+                      | 北投區
+                    option
+                      | 內湖區
+                    option
+                      | 南港區
+                    option
+                      | 文山區
+                    optgroup label=("新北市") 
+                    option
+                      | 板橋區
+                    option
+                      | 中和區
+                    option
+                      | 新莊區
+                    option
+                      | 土城區
+                    option
+                      | 汐止區
+                    option
+                      | 鶯歌區
+                    option
+                      | 淡水區
+                    option
+                      | 五股區
+                    option
+                      | 林口區
+                    option
+                      | 深坑區
+                    option
+                      | 坪林區
+                    option
+                      | 石門區
+                    option
+                      | 萬里區
+                    option
+                      | 雙溪區
+                    option
+                      | 烏來區
+                    option
+                      | 三重區
+                    option
+                      | 永和區
+                    option
+                      | 新店區
+                    option
+                      | 蘆洲區
+                    option
+                      | 樹林區
+                    option
+                      | 三峽區
+                    option
+                      | 瑞芳區
+                    option
+                      | 泰山區
+                    option
+                      | 八里區
+                    option
+                      | 石碇區
+                    option
+                      | 三芝區
+                    option
+                      | 金山區
+                    option
+                      | 平溪區
+                    option
+                      | 貢寮區
+                    
                 .col-md-6
                   input { 
                     type='number' name='min_money'
